# user-installed-packages

./: README.md  list-user-packages  meson.build  user-installed-packages.desktop
data/: help.html  help.md  license.html  meson.build  org.mxlinux.user-installed-packages.policy  user-installed-packages.html
data/de/: help.html
data/es/: help.html
data/fr/: help.html
debian/: changelog  control  copyright  files  install  rules
exec/: meson.build  uip-about.py  uip-apt-install  user-installed-packages
help/: help.md  make-help  meson.build  user-installed-packages.html
icons/: meson.build
translations/: make-help-help  make-help-html  make-help-pot  make-pot  pot-gettext  tx-complete-log  tx-get-help-po  tx-get-po  tx-push-help-pot  tx-push-pot  user-installed-packages-help.pot  user-installed-packages.pot
translations/.tx/: config
translations/help-po/: LINGUAS  ca.po  de.po  es.po  es_ES.po  fi.po  fr.po  fr_BE.po  it.po  meson.build  nb.po  pt.po  pt_BR.po  ru.po  sl.po  sq.po  sv.po
translations/po/: LINGUAS  am.po  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  es.po  es_ES.po  et.po  fa.po  fi.po  fil_PH.po  fr.po  fr_BE.po  gl_ES.po  he_IL.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  mr.po  nb.po  nb_NO.po  nl.po  nl_BE.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  (+11 more)
translations_script/: Makefile  get_translations  update-po-mo.sh
translations_script/.tx/: config
translations_script/mo/am/: user-installed-packages.mo
translations_script/mo/ar/: user-installed-packages.mo
translations_script/mo/bg/: user-installed-packages.mo
translations_script/mo/ca/: user-installed-packages.mo
translations_script/mo/cs/: user-installed-packages.mo
translations_script/mo/da/: user-installed-packages.mo
translations_script/mo/de/: user-installed-packages.mo
translations_script/mo/el/: user-installed-packages.mo
translations_script/mo/es/: user-installed-packages.mo
translations_script/mo/et/: user-installed-packages.mo
translations_script/mo/eu/: user-installed-packages.mo
translations_script/mo/fa/: user-installed-packages.mo
translations_script/mo/fi/: user-installed-packages.mo
translations_script/mo/fr/: user-installed-packages.mo
translations_script/mo/fr_BE/: user-installed-packages.mo
translations_script/mo/he_IL/: user-installed-packages.mo
translations_script/mo/hi/: user-installed-packages.mo
translations_script/mo/hr/: user-installed-packages.mo
translations_script/mo/hu/: user-installed-packages.mo
translations_script/mo/id/: user-installed-packages.mo
translations_script/mo/is/: user-installed-packages.mo
translations_script/mo/it/: user-installed-packages.mo
translations_script/mo/ja/: user-installed-packages.mo
translations_script/mo/kk/: user-installed-packages.mo
translations_script/mo/ko/: user-installed-packages.mo
translations_script/mo/lt/: user-installed-packages.mo
translations_script/mo/mk/: user-installed-packages.mo
translations_script/mo/mr/: user-installed-packages.mo
translations_script/mo/nb/: user-installed-packages.mo
translations_script/mo/nl/: user-installed-packages.mo
translations_script/mo/pl/: user-installed-packages.mo
translations_script/mo/pt/: user-installed-packages.mo
translations_script/mo/pt_BR/: user-installed-packages.mo
translations_script/mo/ro/: user-installed-packages.mo
translations_script/mo/ru/: user-installed-packages.mo
translations_script/mo/sk/: user-installed-packages.mo
translations_script/mo/sl/: user-installed-packages.mo
translations_script/mo/sq/: user-installed-packages.mo
translations_script/mo/sr/: user-installed-packages.mo
translations_script/mo/sv/: user-installed-packages.mo
translations_script/mo/tr/: user-installed-packages.mo
translations_script/mo/uk/: user-installed-packages.mo
translations_script/mo/zh_CN/: user-installed-packages.mo
translations_script/mo/zh_TW/: user-installed-packages.mo
translations_script/po/: user-installed-packages_am.po  user-installed-packages_ar.po  user-installed-packages_bg.po  user-installed-packages_ca.po  user-installed-packages_cs.po  user-installed-packages_da.po  user-installed-packages_de.po  user-installed-packages_el.po  user-installed-packages_es.po  user-installed-packages_et.po  user-installed-packages_eu.po  user-installed-packages_fa.po  user-installed-packages_fi.po  user-installed-packages_fr.po  user-installed-packages_fr_BE.po  user-installed-packages_he_IL.po  user-installed-packages_hi.po  user-installed-packages_hr.po  user-installed-packages_hu.po  user-installed-packages_id.po  user-installed-packages_is.po  user-installed-packages_it.po  user-installed-packages_ja.po  user-installed-packages_kk.po  user-installed-packages_ko.po  user-installed-packages_lt.po  user-installed-packages_mk.po  user-installed-packages_mr.po  user-installed-packages_nb.po  user-installed-packages_nl.po  user-installed-packages_pl.po  user-installed-packages_pt.po  user-installed-packages_pt_BR.po  user-installed-packages_ro.po  user-installed-packages_ru.po  user-installed-packages_sk.po  user-installed-packages_sl.po  user-installed-packages_sq.po  user-installed-packages_sr.po  user-installed-packages_sv.po  (+4 more)
translations_script/po/am/: user-installed-packages.po
translations_script/po/ar/: user-installed-packages.po
translations_script/po/bg/: user-installed-packages.po
translations_script/po/ca/: user-installed-packages.po
translations_script/po/cs/: user-installed-packages.po
translations_script/po/da/: user-installed-packages.po
translations_script/po/de/: user-installed-packages.po
translations_script/po/el/: user-installed-packages.po
translations_script/po/es/: user-installed-packages.po
translations_script/po/et/: user-installed-packages.po
translations_script/po/eu/: user-installed-packages.po
translations_script/po/fa/: user-installed-packages.po
translations_script/pot/: user-installed-packages.pot
xdg/: meson.build  user-installed-packages.desktop  user-installed-packages.desktop.in
(+32 files in other folders)
